# loltab

./: .gitignore  README.md  reqs.txt
admin/: package.json  server.js  streamer_list  testmessage.py
admin/public/js/: admin.js
admin/views/: home.jade
chrome_extension/: injection.js  manifest.json  popup.js  scoreboard.css  todo
chrome_extension/template/: Screen06.xcf  blank_item.xcf  index.html  scoreboard.js  stylesheet.css  texgyreheros-regular-demo.html  texgyreheroscn-regular-demo.html  texgyreheroscn-regular-webfont.eot
chrome_extension/webfont/: texgyreheros-regular-webfont.eot
imgproc/: DisplayImage.cpp  instructions.txt
imgproc/alert/: CMakeLists.txt  alert.cpp
imgproc/dataextract/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_cv.cpp
imgproc/dataextract/ArrayList/: ArrayList.c  ArrayList.cpp  ArrayList.h  ArrayList.hpp  CMakeLists.txt  Makefile  cmake_install.cmake
imgproc/dataextract/HistAlgos/: CMakeLists.txt  HistAlgos.cpp  HistAlgos.hpp  Makefile  cmake_install.cmake
imgproc/dataextract/ImageAlgos/: CMakeLists.txt  ImageAlgos.cpp  ImageAlgos.hpp  Makefile  cmake_install.cmake
imgproc/dataextract/ImageAnalysis/: CMakeLists.txt  ImageAnalysis.cpp  ImageAnalysis.hpp  Makefile  cmake_install.cmake
imgproc/dataextract/StringAlgos/: CMakeLists.txt  Makefile  StringAlgos.c  StringAlgos.cpp  StringAlgos.h  StringAlgos.hpp  cmake_install.cmake
imgproc/dataextract/executable/: CMakeLists.txt  Makefile  cmake_install.cmake  extract_data.cpp  extract_data.hpp
imgproc/detection/: detect.py  stat_tests  temp.txt  test_detect.py
imgproc/detection/main/: CMakeLists.txt  analyze.cpp  bottom_stats_1.txt  color.cfg  detect_sb.cpp  labstats_1080p  left_stats_1.txt  matplot.txt  right_stats_1.txt  sb_imglib.cpp  sb_imglib.h  sbcolors.h  statgen.cpp  temp1  testcv.cpp  top_stats_1.txt
imgproc/detection/stats/: statgen.cpp
imgproc/detection/stats/data/: GenerateColorConfig.py  bottom1080p  bottom720p  left1080p  left720p  right1080p  (+2 more)
imgproc/detection/test/: test_detect.py
imgproc/main/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
imgproc/upload/: createpipe.sh  sampledata.txt  stress_test.sh  upload.py
managers/: Makefile  README.txt  StreamManager.c  queueManager.py  raise_scoreboard_event.py  tqueue.c  tqueue.h
name_scraper/: name_scraper.js  streamerdb.js  streamers.txt  todo
new/: package.json  server.js
production/: README.txt  compileModel.sh  current_list  example.json  loltabber.py  mkstreamer.sh  name_scaper.js  queueManager.py  queue_builder.py  temp  upload.py
production/model/: TIM_READTHIS  metadata.txt  name_scraper.js  queueManager.py
production/streams/dyrus/: detect_sb  extract_data
production/streams/meteos/: queueManager.py
production/streams/scarra/: filemanager.py  names.txt  queueManager.py
server/: load_test.js  package.json  server.js  todo
server/views/: index.jade
stream_parser/: example.py  getflv.py  parseStream.py  parse_command  playbinStream.py  printStreams.py  todo
stream_parser/flvparser/: a.out  flvparser.c
stream_parser/lolkingparser/: lolking.html  lolkingparser.js
