cmake_minimum_required(VERSION 2.8)
project( extract_data )
set(BUILD_POSTFIX "")
include_directories ("${PROJECT_BINARY_DIR}")
add_subdirectory ( ArrayList )
add_subdirectory ( StringAlgos )
add_subdirectory ( ImageAlgos )
add_subdirectory ( ImageAnalysis )
add_subdirectory ( HistAlgos )
add_subdirectory ( executable )
