cmake_minimum_required(VERSION 2.8)
project( EXTRACT_DATA )
set(BUILD_POSTFIX "")
include_directories ("${PROJECT_BINARY_DIR}/ArrayList")
include_directories ("${PROJECT_BINARY_DIR}/StringAlgos")
include_directories ("${PROJECT_BINARY_DIR}/ImageAlgos")
include_directories ("${PROJECT_BINARY_DIR}/ImageAnalysis")
include_directories ("${PROJECT_BINARY_DIR}/HistAlgos")
include_directories ("${PROJECT_BINARY_DIR}/executable")
add_subdirectory ( ArrayList )
add_subdirectory ( StringAlgos )
add_subdirectory ( ImageAlgos )
add_subdirectory ( ImageAnalysis )
add_subdirectory ( HistAlgos )
add_subdirectory ( executable )
