cmake_minimum_required(VERSION 2.8)
project( detect_sb )
find_package( OpenCV REQUIRED )
add_library(sb_imglib sb_imglib.cpp)
include_directories ("${PROJECT_BINARY_DIR}")
include_directories ("${PROJECT_BINARY_DIR}/sb_imglib")
set( EXTRA_LIBS ${EXTRA_LIBS} sb_imglib )
add_executable( detect_sb detect_sb.cpp )
target_link_libraries( detect_sb ${EXTRA_LIBS} ${OpenCV_LIBS} )
